# titanium

./: .gitignore  Cargo.toml  README.MD  titanium.org
doc/: object.dot  structure.dot  user interface.dot
src/: lib.rs  prelude.rs
src/accelerate/: aabb.rs
src/application/: application.rs  config.rs  mod.rs
src/asset/: asset.rs  asset_manager.rs  format.rs  mod.rs
src/backend/: mod.rs
src/backend/glium/: application.rs  event.rs  mod.rs
src/backend/glium/renderer/: buffer.rs  canvas.rs  font.rs  frame.rs  frame_data.rs  fxaa.rs  graphics_paint.rs  mod.rs  render_pass.rs  render_produre.rs  renderer.rs  renderer2d.rs  renderer_manager.rs  screen_data.rs  text_paint.rs
src/backend/hal/: base.rs  geometry.rs  mod.rs  window.rs
src/base/: camera.rs  color.rs  either.rs  file.rs  font.rs  index.rs  light.rs  material.rs  mesh.rs  mod.rs  transform.rs  utils.rs  vertex.rs
src/event/: event.rs  keyboard.rs  mod.rs  utils.rs
src/graphics/: circle.rs  mod.rs  points.rs  rectangle.rs  round_rectangle.rs
src/model/generate/: cube.rs  grid.rs  mod.rs  plane.rs
src/renderer/: canvas.rs  data.rs  image.rs  light.rs  mesh_load.rs  mod.rs  renderer.rs  text.rs
src/renderer/canvas/: canvas.rs  graphics.rs  mod.rs  text.rs
src/renderer/pipeline/: mod.rs  render_pass.rs  shader_buffer.rs
src/renderer/pipeline/shader/: glsl.rs  (+2 more)
src/renderer/scene/: data.rs  mesh.rs  mod.rs  scene.rs
src/scene/: mod.rs  object.rs  scene.rs
src/ui/: mod.rs  ui.rs  widget.rs  widget_set.rs
src/ui/component/: button.rs  input.rs  mod.rs  panel.rs  select.rs  text_line.rs
(+21 files in other folders)
